# astarisland

./: .env.example  CONCRETE_TWEAKS.md  README.md  STATE.md  api.py  backtest.py  concrete_tweaks.md  config.py  historical_prior.py  ig_r3_seed0.npy  ig_r3_seed2.npy  ig_r3_seed4.npy  ig_r4_seed1.npy  ig_r4_seed4.npy  ig_r5_seed4.npy  ig_r6_seed0.npy  main.py  metrics.json  metrics.py  observations.json  predictions_seed_0.npy  predictions_seed_1.npy  predictions_seed_2.npy  predictions_seed_3.npy  predictions_seed_4.npy  predictor.py  pyproject.toml  requirements.txt  solver.py  state.py  task.md  world_dynamics.py
.claude/: launch.json
MDs/: API_REFERENCE.md  CONCRETE_TWEAKS.md  QUICKSTART.md  SCORING.md  SIMULATION_MECHANICS.md  TASK_DESCRIPTION.md
artifacts/: historical_priors.json  learned_prior.json  prior_blend_gate.joblib  prior_blend_gate_eval.json  residual_calibrator.joblib  settlement_spread_sweep.json  test_historical_priors.json
data_prev_rounds/: ig_r1_seed0.npy  ig_r1_seed1.npy  ig_r1_seed2.npy  ig_r1_seed3.npy  ig_r1_seed4.npy  ig_r2_seed0.npy  ig_r2_seed1.npy  ig_r2_seed3.npy  ig_r2_seed4.npy  ig_r3_seed1.npy  ig_r3_seed3.npy  ig_r4_seed0.npy  ig_r4_seed2.npy  ig_r4_seed3.npy  ig_r5_seed0.npy  ig_r5_seed1.npy  ig_r5_seed2.npy  ig_r5_seed3.npy  ig_r6_seed2.npy  ig_r6_seed3.npy  ig_r6_seed4.npy  ig_r7_seed0.npy  ig_r7_seed1.npy  ig_r7_seed3.npy  ig_r7_seed4.npy  ig_r8_seed0.npy  ig_r8_seed1.npy  ig_r8_seed2.npy  ig_r8_seed3.npy  ig_r8_seed4.npy
scripts/: analyze_round.py  archive_completed_rounds.py  build_historical_priors.py  replay_saved_run.py  (+14 more)
(+1475 files in other folders)
