[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astar-island-baseline"
version = "0.1.0"
description = "Competition-ready baseline for the Astar Island challenge"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "requests>=2.31",
  "matplotlib>=3.8",
  "scipy>=1.13",
  "scikit-learn>=1.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
